--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2022.02]</font>
+                    </b> Paper of Minghui Wu was accepted by <b>IEEE Journal on Selected Areas in Communications</b> (
+                    <a href=" " target="_blank">
+                        <font>吴铭晖 论文被JSAC(<b>IF=9.144</b>)期刊录用</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.01]</font>
                     </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Systems Journal (
                     <a href=" " target="_blank">
@@ -1168,7 +1176,8 @@
 
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[25] Y. Wang and <b>Z. Gao</b>, "Three-Dimensional Trajectory Design for Multi-User MISO UAV
+                        <span>[25] Y. Wang and <b>Z. Gao</b>, "Three-Dimensional Trajectory Design for Multi-User MISO
+                            UAV
                             Communications: A Deep Reinforcement Learning Approach," <i>2021 IEEE/CIC ICCC</i>,
                             2021, pp. 1-5.
                             [<a href="https://ieeexplore.ieee.org/document/9580401" target="_blank">URL</a>]
@@ -1179,7 +1188,8 @@
 
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[24] A. Liao, <b>Z. Gao</b>, Y. Yang, H. H. Nguyen, H. Wang and H. Yin, "Angle Estimation for
+                        <span>[24] A. Liao, <b>Z. Gao</b>, Y. Yang, H. H. Nguyen, H. Wang and H. Yin, "Angle Estimation
+                            for
                             Terahertz Ultra-Massive MIMO-Based Space-to-Air Communications," <i>2021 IEEE/CIC ICCC</i>,
                             2021, pp. 1-5.
                             [<a href="https://ieeexplore.ieee.org/document/9580418" target="_blank">URL</a>]
@@ -1190,7 +1200,8 @@
 
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[23] L. Qiao, <b>Z. Gao</b>, C. He, Z. Xiao, D. Zheng and J. Zhang, "Non-Coherent Grant-Free
+                        <span>[23] L. Qiao, <b>Z. Gao</b>, C. He, Z. Xiao, D. Zheng and J. Zhang, "Non-Coherent
+                            Grant-Free
                             Massive IoT Access for mMTC: An Index Modulation Perspective," <i>2021 IEEE/CIC ICCC</i>,
                             2021, pp. 1-5.
                             [<a href="https://ieeexplore.ieee.org/document/9580224" target="_blank">URL</a>]
