--- a/index.html
+++ b/index.html
@@ -160,24 +160,25 @@
                     </a>)
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2021.07]</font>
-                    </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
-                    <a href=" " target="_blank">
-                        <font>高镇入选重要期刊IEEE Communications Letters编委</font>
-                    </a>)
-                </li>
-                <li> <b>
-                        <font color="#FF0000">[2021.07]</font>
-                    </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of
-                    Wireless Big Data Competition (
-                    <a href=" " target="_blank">
-                        <font>王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
-                    </a>)
-                </li>
+
 
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2021.07]</font>
+                        </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
+                        <a href=" " target="_blank">
+                            <font>高镇入选重要期刊IEEE Communications Letters编委</font>
+                        </a>)
+                    </li>
+                    <li> <b>
+                            <font color="#FF0000">[2021.07]</font>
+                        </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of
+                        Wireless Big Data Competition (
+                        <a href=" " target="_blank">
+                            <font>王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
+                        </a>)
+                    </li>
                     <li> <b>
                             <font color="#FF0000">[2021.07]</font>
                         </b> Paper of Li Qiao was accepted by <b>IEEE Transactions on Wireless Communications</b>(
@@ -1518,8 +1519,8 @@
                             <font style="font-family:Microsoft YaHei">刘仕聪, 廖安文, 万子维, 柯玛龙 研究生国家奖学金</font>
                         </li>
 
-                        <li>2021, M. Ke, Principal Academic Scholarship, Beijing Institute of Technology |
-                            <font style="font-family:Microsoft YaHei">柯玛龙 博士特等奖学金</font>
+                        <li>2021, M. Ke, and Z. Wan, Principal Academic Scholarship, Beijing Institute of Technology |
+                            <font style="font-family:Microsoft YaHei">柯玛龙、万子维 博士特等奖学金</font>
                         </li>
 
                         <li>2021, S. Liu, Z. Wan, M. Ke, Outstanding Graduate Student, Beijing Institute of
@@ -1531,8 +1532,8 @@
                             <font style="font-family:Microsoft YaHei">马西锁 北京市、北京理工大学优秀毕业生</font>
                         </li>
 
-                        <li>2021, X. Ma, Outstanding Member of Communist Youth League |
-                            <font style="font-family:Microsoft YaHei">马西锁 优秀团员</font>
+                        <li>2021, X. Ma, and Z. Wan, Outstanding Member of Communist Youth League |
+                            <font style="font-family:Microsoft YaHei">马西锁、万子维 优秀团员</font>
                         </li>
 
                         <li>2020, M. Wu, Second Prize of National Competition of AI |
@@ -1540,6 +1541,9 @@
                         </li>
                         <li>2020, X. Ma, Principal Academic Scholarship, Beijing Institute of Technology |
                             <font style="font-family:Microsoft YaHei">马西锁 特等学业奖学金</font>
+                        </li>
+                        <li>2020, Z. Wan, URSI General Assembly and Scientific Symposium Honorable Mention |
+                            <font style="font-family:Microsoft YaHei">万子维 URSI GASS H 奖</font>
                         </li>
                         <li>2020, X. Ma, S. Liu, National Scholarship for Graduate Student, Beijing Institute of
                             Technology |
