--- a/index.html
+++ b/index.html
@@ -589,6 +589,14 @@
                 </b>: </p>
             <font size="3">
                 <ul>
+                    <p style="text-indent: -1.5rem;margin-left: 0rem;">
+                        <span>[38] <b>Z. Gao</b>, Minghui Wu, Chun Hu, Feifei Gao, Guanghui Wen, Dezhi Zheng, Jun Zhang,
+                            "Data-Driven Deep Learning Based Hybrid Beamforming for Aerial Massive MIMO-OFDM Systems
+                            with Implicit CSI", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2201.06778
+                            (<b>SCI Q1 Top, IF=9.619</b>)
+                            [<a href="https://arxiv.org/abs/2201.06778" target="_blank">arXiv</a>]
+                        </span>
+                    </p>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[37] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. Zheng, M. J. Hossain, Y. Gao, D. W. K. Ng, and
                             M. Di
@@ -596,6 +604,7 @@
                             Access", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2112.14209v2
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2112.14209" target="_blank">arXiv</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9726781" target="_blank">IEEE</a>]
                         </span>
                     </p>
 
@@ -1542,7 +1551,8 @@
                         <li>2020, X. Ma, Principal Academic Scholarship, Beijing Institute of Technology |
                             <font style="font-family:Microsoft YaHei">马西锁 特等学业奖学金</font>
                         </li>
-                        <li>2020, Z. Wan, URSI General Assembly and Scientific Symposium Honorable Mention |
+                        <li>2020, Z. Wan, General Assembly and Scientific Symposium Honorable Mention, Union Radio
+                            Scientifique Internationale |
                             <font style="font-family:Microsoft YaHei">万子维 URSI GASS H 奖</font>
                         </li>
                         <li>2020, X. Ma, S. Liu, National Scholarship for Graduate Student, Beijing Institute of
