--- a/index.html
+++ b/index.html
@@ -607,6 +607,25 @@
                             [<a href="https://ieeexplore.ieee.org/document/9726781" target="_blank">IEEE</a>]
                         </span>
                     </p>
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            <h4 class="panel-title">
+                                <a data-toggle="collapse" data-parent="#accordion" href="#collapseNine">
+                                    <i class="fa fa-folder-open-o" aria-hidden="true">&nbsp;&nbsp;Click here to
+                                        unfold/fold video.</i>
+                                </a>
+                            </h4>
+                        </div>
+                        <div id="collapseNine" class="panel-collapse collapse">
+                            <div class="panel-body" style="position: relative; padding: 30% 45%;">
+                                <iframe
+                                    src="//player.bilibili.com/player.html?aid=339722692&bvid=BV1pR4y1V7cH&cid=549062564&page=1&as_wide=1&high_quality=1&danmaku="
+                                    scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"
+                                    style="position: absolute; width: 90%; height: 90%; left: 45px; top: 30px;">
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[36] M. Ke, <b>Z. Gao</b>, Y. Huang, G. Ding, D. W. K. Ng, Q. Wu, J. Zhang, "An Edge
