Y. Mei new paper
and bug fix

--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                             Access", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2112.14209v2
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2112.14209" target="_blank">arXiv</a>]
-                            [<a href="https://ieeexplore.ieee.org/document/9726781" target="_blank">IEEE</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9726781" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
                     <div class="panel panel-default">
@@ -632,7 +632,7 @@
                             Computing Paradigm for Massive IoT Connectivity Over High-Altitude Platform Networks," in
                             IEEE Wireless Communications, vol. 28, no. 5, pp. 102-109, October 2021.
                             (<b>SCI Q1 Top, IF=11.979</b>)
-                            [<a href="https://ieeexplore.ieee.org/document/9615110" target="_blank">URL</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9615110" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
@@ -641,8 +641,9 @@
                             Based Joint Activity and Data Detection for Grant-Free Massive Access," arXiv preprint
                             arXiv:2011.07928 (2020).
                             (<i>Pre-Print</i>)
-                            [<a href="https://arxiv.org/abs/2011.07928" target="_blank">URL</a>]
+                            [<a href="https://arxiv.org/abs/2011.07928" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/y.mei-twc21" target="_blank">Codes</a>]
+                            [<a href="https://ieeexplore.ieee.org/document/9527086" target="_blank">IEEE URL</a>]
                         </span>
                     </p>
 
