--- a/index.html
+++ b/index.html
@@ -73,10 +73,27 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2022.03]</font>
+                    </b> Zhuoran Li and Hongshan Liu were awarded Outstanding Communist Youth League Member and Outstanding Students of SIE (
+                    <a href=" " target="_blank">
+                        <font>李卓然，刘泓杉分别获优秀团员、致信精英表彰</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.02]</font>
                     </b> Paper of Minghui Wu was accepted by <b>IEEE Journal on Selected Areas in Communications</b> (
-                    <a href=" " target="_blank">
+                    <a href="https://arxiv.org/abs/2201.06778" target="_blank">
                         <font>吴铭晖 论文被JSAC(<b>IF=9.144</b>)期刊录用</font>
+                    </a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.01]</font>
+                    </b> Prof. Gao was awarded <font color="#FF0000">First Prize</font> in Natural Science by Chinese
+                    Institute of Electronics (CIE) (
+                    <a href="https://www.cie.org.cn/system/upload/file/20220112/1641979738101073.pdf" target="_blank">
+                        <font>高镇被中国电子学会授予自然科学一等奖（空基高维时变信道下阵列宽带传输理论与方法）</font>
                     </a>)
                 </li>
 
@@ -143,27 +160,25 @@
                     </a>)
                 </li>
 
-                <li> <b>
-                        <font color="#FF0000">[2021.08]</font>
-                    </b> Paper of Yang Wang was accepted by <b>IEEE Internet of Things Journal</b> (
-                    <a href=" " target="_blank">
-                        <font>王洋论文被IoTJ期刊(<b>IF=9.471</b>)录用</font>
-                    </a>)
-                </li>
-
-                <li> <b>
-                        <font color="#FF0000">[2021.08]</font>
-                    </b> Paper of Keke Ying was awarded Best Paper by <b>10th IEEE/CIC International Conference on
-                        Communications in China</b> (
-                    <a href="https://mp.weixin.qq.com/s/uYRtx5sC5k8b1NeHRiXoqA" target="_blank">
-                        <font>应科柯 获得第十届中国国际通信会议最佳论文奖</font>
-                    </a>)
-                </li>
-
-
-
                 <details>
                     <summary>View More Earlier News</summary>
+                    <li> <b>
+                            <font color="#FF0000">[2021.08]</font>
+                        </b> Paper of Yang Wang was accepted by <b>IEEE Internet of Things Journal</b> (
+                        <a href=" " target="_blank">
+                            <font>王洋论文被IoTJ期刊(<b>IF=9.471</b>)录用</font>
+                        </a>)
+                    </li>
+
+                    <li> <b>
+                            <font color="#FF0000">[2021.08]</font>
+                        </b> Paper of Keke Ying was awarded Best Paper by <b>10th IEEE/CIC International Conference on
+                            Communications in China</b> (
+                        <a href="https://mp.weixin.qq.com/s/uYRtx5sC5k8b1NeHRiXoqA" target="_blank">
+                            <font>应科柯 获得第十届中国国际通信会议最佳论文奖</font>
+                        </a>)
+                    </li>
+
                     <li> <b>
                             <font color="#FF0000">[2021.07]</font>
                         </b> Dr. Gao was invited as the <b>Associate Editor</b> of IEEE Communications Letters (
@@ -173,7 +188,7 @@
                     </li>
                     <li> <b>
                             <font color="#FF0000">[2021.07]</font>
-                        </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of
+                        </b> Yang Wang and Minghui Wu were respectively awarded <b>Second</b> and <b>Third</b> Prizes of
                         Wireless Big Data Competition (
                         <a href=" " target="_blank">
                             <font>王洋 吴铭晖 获得第二届无线大数据竞赛-AI无线网络信道重构二等奖、三等奖</font>
@@ -592,7 +607,8 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[38] <b>Z. Gao</b>, Minghui Wu, Chun Hu, Feifei Gao, Guanghui Wen, Dezhi Zheng, Jun Zhang,
                             "Data-Driven Deep Learning Based Hybrid Beamforming for Aerial Massive MIMO-OFDM Systems
-                            with Implicit CSI", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2201.06778
+                            with Implicit CSI", accepted by IEEE Journal on Selected Areas in Communications,
+                            arXiv:2201.06778
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2201.06778" target="_blank">arXiv</a>]
                         </span>
