--- a/index.html
+++ b/index.html
@@ -592,7 +592,8 @@
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[38] <b>Z. Gao</b>, Minghui Wu, Chun Hu, Feifei Gao, Guanghui Wen, Dezhi Zheng, Jun Zhang,
                             "Data-Driven Deep Learning Based Hybrid Beamforming for Aerial Massive MIMO-OFDM Systems
-                            with Implicit CSI", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2201.06778
+                            with Implicit CSI", accepted by IEEE Journal on Selected Areas in Communications,
+                            arXiv:2201.06778
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2201.06778" target="_blank">arXiv</a>]
                         </span>
@@ -1463,14 +1464,15 @@
                 <br />
 
 
-
-
-
                 <A NAME="Patents">
                     <h2><i class="fa fa-file-archive-o" aria-hidden="true"></i>&nbsp;&nbsp;Patents</h2>
                 </A>
                 <font size="3">
                     <ul>
+                        <li>Y. Wang, K. Ying, S. Liu, Z. Gao, D. Zheng, J. Zhang, 一种物联网数据收集中的无人机轨迹优化方法及系统 Patent No. 202110635429.8, Publication No.
+                            CN113382060B.</li>
+                        <li>Z. Gao, M. Wu, Z. Wan, L. Qiao, D. Zheng, J. Zhang, 基于深度学习的联合导频、反馈、多用户混合编码方法. Patent No.
+                            202110966553.2, Publication No. CN113691288A.</li>
                         <li>Z. Gao, Y. Sun, J. Mao, H. Wang, 一种基于码本的自适应分组宽带混和波束赋形设计方法. Patent No.
                             201910791311.7, Publication No. CN110518952B.</li>
                         <li>Z. Gao, A. Liao, K. Yang, H. Wang, 一种基于超分辨率角度和时延估计的宽带信道估计方法. Patent No.
