--- a/index.html
+++ b/index.html
@@ -75,8 +75,17 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2021.08]</font>
+                    </b> Dr. Zhen Gao is the recipient of Elsevier 2021 MOST Cited Chinese Researchers (
+                    <a href=" " target="_blank">
+                        <font>高镇 入选爱思唯尔2021中国高被引学者(电子科学与技术方向)</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.03]</font>
-                    </b> Zhuoran Li and Hongshan Liu were awarded Outstanding Communist Youth League Member and Outstanding Students of SIE (
+                    </b> Zhuoran Li and Hongshan Liu were awarded Outstanding Communist Youth League Member and
+                    Outstanding Students of SIE (
                     <a href=" " target="_blank">
                         <font>李卓然，刘泓杉分别获优秀团员、致信精英表彰</font>
                     </a>)
@@ -1488,7 +1497,8 @@
                 </A>
                 <font size="3">
                     <ul>
-                        <li>Y. Wang, K. Ying, S. Liu, Z. Gao, D. Zheng, J. Zhang, 一种物联网数据收集中的无人机轨迹优化方法及系统 Patent No. 202110635429.8, Publication No.
+                        <li>Y. Wang, K. Ying, S. Liu, Z. Gao, D. Zheng, J. Zhang, 一种物联网数据收集中的无人机轨迹优化方法及系统 Patent No.
+                            202110635429.8, Publication No.
                             CN113382060B.</li>
                         <li>Z. Gao, M. Wu, Z. Wan, L. Qiao, D. Zheng, J. Zhang, 基于深度学习的联合导频、反馈、多用户混合编码方法. Patent No.
                             202110966553.2, Publication No. CN113691288A.</li>
