--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <font color="#FF0000">[2022.04]</font>
                     </b> Dr. Zhen Gao is the recipient of Elsevier 2021 MOST Cited Chinese Researchers (
                     <a href=" " target="_blank">
-                        <font>高镇 入选爱思唯尔2021中国高被引学者(电子科学与技术方向)</font>
+                        <font>高镇 入选爱思唯尔2021中国高被引学者</font>
                     </a>)
                 </li>
 
