--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <font>高镇 入选爱思唯尔2020中国高被引学者</font>
                         </a>)
                     </li>
-                    
+
                     <li> <b>
                             <font color="#FF0000">[2021.08]</font>
                         </b> Paper of Yang Wang was accepted by <b>IEEE Internet of Things Journal</b> (
@@ -618,6 +618,14 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
+                        <span>[39] X. Zhou, K. Ying, S. Liu, M. Ke, <b>Z. Gao</b> and M.-S. Alouini, "Reconfigurable
+                            intelligent surface assisted grant-free massive access," in Intelligent and Converged
+                            Networks, vol. 3, no. 1, pp. 134-143, March 2022, doi: 10.23919/ICN.2022.0009.
+                            [<a href="https://ieeexplore.ieee.org/document/9765812" target="_blank">IEEE URL</a>]
+                        </span>
+                    </p>
+
+                    <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[38] <b>Z. Gao</b>, Minghui Wu, Chun Hu, Feifei Gao, Guanghui Wen, Dezhi Zheng, Jun Zhang,
                             "Data-Driven Deep Learning Based Hybrid Beamforming for Aerial Massive MIMO-OFDM Systems
                             with Implicit CSI", accepted by IEEE Journal on Selected Areas in Communications,
@@ -627,11 +635,13 @@
                             [<a href="https://github.com/wuminghui123/D3L-HB" target="_blank">Codes</a>]
                         </span>
                     </p>
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[37] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. Zheng, M. J. Hossain, Y. Gao, D. W. K. Ng, and
                             M. Di
-                            Renzo, "Joint Activity and Blind Information Detection for UAV-Assisted Massive IoT
-                            Access", accepted by IEEE Journal on Selected Areas in Communications, arXiv:2112.14209v2
+                            Renzo, "Joint Activity and Blind Information Detection for UAV-Assisted Massive IoT Access,"
+                            in IEEE Journal on Selected Areas in Communications, vol. 40, no. 5, pp. 1489-1508, May
+                            2022, doi: 10.1109/JSAC.2022.3143255.
                             (<b>SCI Q1 Top, IF=9.619</b>)
                             [<a href="https://arxiv.org/abs/2112.14209" target="_blank">arXiv</a>]
                             [<a href="https://ieeexplore.ieee.org/document/9726781" target="_blank">IEEE URL</a>]
@@ -667,9 +677,10 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[35] Y. Mei, <b>Z. Gao</b>, Y. Wu, W. Chen, D. W. K. Ng, M. Di Renzo, "Compressive Sensing
-                            Based Joint Activity and Data Detection for Grant-Free Massive Access," arXiv preprint
-                            arXiv:2011.07928 (2020).
+                        <span>[35] Y. Mei, <b>Z. Gao</b>, Y. Wu, W. Chen, D. W. K. Ng, M. Di Renzo, "Compressive
+                            Sensing-Based Joint Activity and Data Detection for Grant-Free Massive IoT Access," in IEEE
+                            Transactions on Wireless Communications, vol. 21, no. 3, pp. 1851-1869, March 2022, doi:
+                            10.1109/TWC.2021.3107576.
                             (<i>Pre-Print</i>)
                             [<a href="https://arxiv.org/abs/2011.07928" target="_blank">arXiv</a>]
                             [<a href="https://github.com/gaozhen16/y.mei-twc21" target="_blank">Codes</a>]
@@ -699,9 +710,10 @@
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[34] Y. Wang, <b>Z. Gao</b>, J. Zhang, X. Cao, D. Zheng, Y. Gao, D. W. K. Ng, M. D. Renzo,
-                            "Trajectory Design for UAV-Based Internet-of-Things Data Collection: A Deep Reinforcement
-                            Learning Approach," in IEEE Internet of Things Journal
-                            (<b>SCI Q1 Top, IF=9.417</b>, <i>Early Access</i>)
+                            "Trajectory Design for UAV-Based Internet of Things Data Collection: A Deep Reinforcement
+                            Learning Approach," in IEEE Internet of Things Journal, vol. 9, no. 5, pp. 3899-3912, 1
+                            March1, 2022, doi: 10.1109/JIOT.2021.3102185.
+                            (<b>SCI Q1 Top, IF=9.417</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9504602" target="_blank">URL</a>]
                             [<a href="https://github.com/yang05941601/UAV-Navigation-Learning" target="_blank">Code</a>]
                         </span>
@@ -742,10 +754,11 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[32] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. W. K. Ng, M. D. Renzo, M.-S Alouini, "Massive
-                            Access in Media Modulation Based Massive
-                            Machine-Type Communications," in IEEE Transactions on Wireless Communications.
-                            (<i>Pre-Print</i>)
+                        <span>[32] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. W. K. Ng, M. D. Renzo and M. -S. Alouini,
+                            "Massive
+                            Access in Media Modulation Based Massive Machine-Type Communications," in IEEE Transactions
+                            on Wireless Communications, vol. 21, no. 1, pp. 339-356, Jan. 2022, doi:
+                            10.1109/TWC.2021.3095484.
                             [<a href="https://arxiv.org/abs/2104.03874" target="_blank">URL</a>]
                             [<a href="./Files/ql_slides_imnoma.pdf" target="_blank">Slides</a>]
                             [<a href="https://github.com/gaozhen16/Source-Code-L.Qiao/tree/main/TWC21"
