--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2022.02]</font>
+                    </b> Paper of Ziwei Wan was accepted by <b>IEEE Network</b> (
+                    <a href="" target="_blank">
+                        <font>万子维 论文被IEEE Network (<b>IF=10.693</b>)期刊录用</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.04]</font>
                     </b> Dr. Zhen Gao is the recipient of Elsevier 2021 MOST Cited Chinese Researchers (
                     <a href=" " target="_blank">
