--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.05]</font>
+                    </b> Invited Paper of Xingyu Zhou was accepted by <b>Intelligent and Converged Networks</b>(
+                    <a href="" target="_blank">
+                        <font>周星宇论文被ICN期刊录用并获得<b><font color="#FF0000">8000</font></b>元奖励</font>
+                    </a>)【智能透射表面辅助的免授权海量接入】
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.05]</font>
                     </b> Paper of Ziwei Wan was accepted by <b>IEEE Network</b> (
                     <a href="" target="_blank">
                         <font>万子维 论文被IEEE Network (<b>IF=10.693</b>)期刊录用</font>
@@ -154,7 +162,7 @@
                         <font>硕士生吴铭晖,刘仕聪和王洋获得无线通信AI竞赛三等奖</font>
                     </a>)
                 </li>
-                
+
                 <details>
                     <summary>View More Earlier News</summary>
                     <li> <b>
@@ -661,7 +669,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
                         <span>[37] L. Qiao, J. Zhang, <b>Z. Gao</b>, D. Zheng, M. J. Hossain, Y. Gao, D. W. K. Ng, and
                             M. Di
