--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.05]</font>
-                    </b> Invited Paper of Xingyu Zhou was accepted by <b>Intelligent and Converged Networks</b>(
+                    </b> <font color="#FF0000">Invited Paper</font> of Xingyu Zhou was accepted by <b>Intelligent and Converged Networks</b>(
                     <a href="" target="_blank">
-                        <font>周星宇论文被ICN期刊录用并获得<b><font color="#FF0000">8000</font></b>元奖励</font>
+                        <font>周星宇特邀论文被ICN期刊录用并获得期刊<b><font color="#FF0000">8000</font></b>元奖励</font>
                     </a>)【智能透射表面辅助的免授权海量接入】
                 </li>
 
