--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <font size="4" ; font style="font-family:Microsoft YaHei">高 镇</font>
                                 <font size="4">)</font>
                             </a><br />
-                            <i> Ph.D., Associate Professor, Ph.D. Tutor </i>
+                            <i> Ph.D., Associate Professor, Ph.D. Superviser </i>
                             <br /><br />
                             <a href="http://arims.bit.edu.cn/" target="_blank">Advanced Research Institute of
                                 Multidisciplinary Science (ARIMS)</a><br />
@@ -1017,8 +1017,8 @@
                             5, pp. 5677-5682, May 2020.
                             (<b>SCI Q2, IF=5.379</b>)
                             [<a href="https://ieeexplore.ieee.org/document/9037126" target="_blank">URL</a>]
-                            [<a href="https://github.com/gaozhen16/Source-Code-X.Ma/tree/main/TVT"
-                                target="_blank">Code</a>]
+                            <!--[<a href="https://github.com/gaozhen16/Source-Code-X.Ma/tree/main/TVT"
+                                target="_blank">Code</a>]-->
                         </span>
                     </p>
 
