--- a/index.html
+++ b/index.html
@@ -76,9 +76,13 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.05]</font>
-                    </b> <font color="#FF0000">Invited Paper</font> of Xingyu Zhou was accepted by <b>Intelligent and Converged Networks</b>(
+                    </b>
+                    <font color="#FF0000">Invited Paper</font> of Xingyu Zhou was accepted by <b>Intelligent and
+                        Converged Networks</b>(
                     <a href="" target="_blank">
-                        <font>周星宇特邀论文被ICN期刊录用并获得期刊<b><font color="#FF0000">8000</font></b>元奖励</font>
+                        <font>周星宇特邀论文被ICN期刊录用并获得期刊<b>
+                                <font color="#FF0000">8000</font>
+                            </b>元奖励</font>
                     </a>)【智能透射表面辅助的免授权海量接入】
                 </li>
 
@@ -1023,7 +1027,8 @@
                     </p>
 
                     <p style="text-indent: -2.0rem;margin-left: 0rem;">
-                        <span>[22] K. Ying, Z. Gao, S. Lyu, Y. Wu, H. Wang and M. Alouini, "GMD-Based Hybrid Beamforming
+                        <span>[22] K. Ying, <b>Z. Gao</b>, S. Lyu, Y. Wu, H. Wang and M. Alouini, "GMD-Based Hybrid
+                            Beamforming
                             for Large Reconfigurable Intelligent Surface Assisted Millimeter-Wave Massive MIMO," <i>IEEE
                                 Access</i>, vol. 8, pp. 19530-19539, 2020.
                             (<b>SCI Q2, IF=3.745</b>)
@@ -1551,14 +1556,18 @@
                             CN113382060B.</li>
                         <li>Z. Gao, M. Wu, Z. Wan, L. Qiao, D. Zheng, J. Zhang, 基于深度学习的联合导频、反馈、多用户混合编码方法. Patent No.
                             202110966553.2, Publication No. CN113691288A.</li>
-                        <li>Z. Gao, Y. Sun, J. Mao, H. Wang, 一种基于码本的自适应分组宽带混和波束赋形设计方法. Patent No.
-                            201910791311.7, Publication No. CN110518952B.</li>
-                        <li>Z. Gao, A. Liao, K. Yang, H. Wang, 一种基于超分辨率角度和时延估计的宽带信道估计方法. Patent No.
-                            201810778028.6, Publication No. CN108933745B.</li>
+                        <li>L. Qiao, Y. Mei, Z. Gao, J. Zhang, 串行干扰消除的海量媒介调制设备上行多址接入系统. Patent No.
+                            202110053140.5, Publication No. CN112787758B.</li>
                         <li>Z. Gao, Z. Wan, A. Liao, Z. Xiao, K. Yang, 利用冗余字典加强稀疏性的透镜天线阵列信道估计方法. Patent No.
                             201910879291.9, Publication No. CN110650103B.</li>
+                        <li>Z. Gao, Y. Sun, J. Mao, H. Wang, 一种基于码本的自适应分组宽带混和波束赋形设计方法. Patent No.
+                            201910791311.7, Publication No. CN110518952B.</li>
                         <li>Z. Gao, M. Ke, Z. Xiao, and Y. Wu, 一种自适应开销的活跃用户检测和信道估计方法. Patent No. 201910345235.7,
-                            Publication No. CN110071881A.</li>
+                                Publication No. CN110071881A.</li>
+                        <li>Z. Gao, Y. Sun, Z. Xiao, H. Wang, 一种混合预编码器及其设计方法. Patent No.
+                            201910065149.0, Publication No. CN109861731B.</li>
+                        <li>Z. Gao, A. Liao, K. Yang, H. Wang, 一种基于超分辨率角度和时延估计的宽带信道估计方法. Patent No.
+                            201810778028.6, Publication No. CN108933745B.</li>
                     </ul>
                 </font>
                 <br />
