--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                        <font color="#FF0000">[2022.06]</font>
+                    </b> Thesis of Hongshan Liu, Yifei Zhang, Zhuoran Li, and Ye Zeng were awarded Outstanding Thesis (
+                    <a href="" target="_blank">
+                        <font>刘泓杉(市级), 张翼飞(市级), 李卓然(市级), 曾烨(校级)本科毕业论文获选优秀毕业设计</font>
+                    </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.05]</font>
                     </b>
                     <font color="#FF0000">Invited Paper</font> of Xingyu Zhou was accepted by <b>Intelligent and
@@ -1563,7 +1571,7 @@
                         <li>Z. Gao, Y. Sun, J. Mao, H. Wang, 一种基于码本的自适应分组宽带混和波束赋形设计方法. Patent No.
                             201910791311.7, Publication No. CN110518952B.</li>
                         <li>Z. Gao, M. Ke, Z. Xiao, and Y. Wu, 一种自适应开销的活跃用户检测和信道估计方法. Patent No. 201910345235.7,
-                                Publication No. CN110071881A.</li>
+                            Publication No. CN110071881A.</li>
                         <li>Z. Gao, Y. Sun, Z. Xiao, H. Wang, 一种混合预编码器及其设计方法. Patent No.
                             201910065149.0, Publication No. CN109861731B.</li>
                         <li>Z. Gao, A. Liao, K. Yang, H. Wang, 一种基于超分辨率角度和时延估计的宽带信道估计方法. Patent No.
