--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.06]</font>
-                    </b> Thesis of Hongshan Liu, Yifei Zhang, Zhuoran Li, and Ye Zeng were awarded Outstanding Thesis (
+                    </b> Hongshan Liu, Yifei Zhang, Zhuoran Li, and Ye Zeng were elected as Outstanding Graduates (
                     <a href="" target="_blank">
-                        <font>刘泓杉(市级), 张翼飞(市级), 李卓然(市级), 曾烨(校级)本科毕业论文获选优秀毕业设计</font>
+                        <font>刘泓杉(市级), 张翼飞(市级), 李卓然(市级), 曾烨(校级)获选优秀本科毕业生</font>
                     </a>)
                 </li>
 
