--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.06]</font>
+                    </b> Conference Paper of Malong Ke and Shicong Liu were elected as Best and Student Best paper resp. (
+                    <a href="" target="_blank">
+                        <font>柯玛龙、刘仕聪的会议论文被分别评为最佳/学生最佳论文</font>
+                    </a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.06]</font>
                     </b> Hongshan Liu, Yifei Zhang, Zhuoran Li, and Ye Zeng were elected as Outstanding Graduates (
                     <a href="" target="_blank">
                         <font>刘泓杉(市级), 张翼飞(市级), 李卓然(市级), 曾烨(校级)获选优秀本科毕业生</font>
