--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.06]</font>
-                    </b> Conference Paper of Malong Ke and Shicong Liu were elected as Best and Student Best paper resp. (
+                    </b> IWCMC Conference Paper of Malong Ke and Shicong Liu were elected as Best and Student Best paper resp. (
                     <a href="" target="_blank">
-                        <font>柯玛龙、刘仕聪的会议论文被分别评为最佳/学生最佳论文</font>
+                        <font>柯玛龙、刘仕聪的IWCMC会议论文被分别评为最佳/学生最佳论文</font>
                     </a>)
                 </li>
 
