--- a/index.html
+++ b/index.html
@@ -76,7 +76,16 @@
             <ul id="latestnews">
                 <li> <b>
                         <font color="#FF0000">[2022.06]</font>
-                    </b> IWCMC Conference Paper of Malong Ke and Shicong Liu were elected as Best and Student Best paper resp. (
+                    </b> Hongshan Liu was awarded the highest Scholarship of Beijing Institute of Technology (
+                    <a href="" target="_blank">
+                        <font>祝贺刘泓杉获得北京理工大学2022年徐特立奖学金(最高荣誉奖学金)</font>
+                    </a>)
+                </li>
+
+                <li> <b>
+                        <font color="#FF0000">[2022.06]</font>
+                    </b> IWCMC Conference Paper of Malong Ke and Shicong Liu were elected as Best and Student Best paper
+                    resp. (
                     <a href="" target="_blank">
                         <font>柯玛龙、刘仕聪的IWCMC会议论文被分别评为最佳/学生最佳论文</font>
                     </a>)
