--- a/index.html
+++ b/index.html
@@ -75,6 +75,14 @@
             </A>
             <ul id="latestnews">
                 <li> <b>
+                    <font color="#FF0000">[2022.06]</font>
+                </b> Yang Wang and Shicong Liu got internship offer of Meituan and ByteDance in related fields (
+                <a href="" target="_blank">
+                    <font>王洋和刘仕聪分别获美团和字节跳动相关方向实习offer</font>
+                </a>)
+                </li>
+
+                <li> <b>
                         <font color="#FF0000">[2022.06]</font>
                     </b> Hongshan Liu was awarded the highest Scholarship of Beijing Institute of Technology (
                     <a href="" target="_blank">
