--- a/index.html
+++ b/index.html
@@ -1632,7 +1632,7 @@
                     <ul>
                         <li><span style="font-variant-caps: small-caps;">IEEE Systems Journal</span></li>
                         <li><span style="font-variant-caps: small-caps;">IEEE Communications Letters</span></li>
-                        <li><span style="font-variant-caps: small-caps;">IEEE Access</span></li>
+                        <!-- <li><span style="font-variant-caps: small-caps;">IEEE Access</span></li> -->
                         <li>Frontiers in Communications and Networks</li>
                     </ul>
                 </font>
@@ -1646,7 +1646,7 @@
                     </b>: </p>
                 <font size="3">
                     <ul>
-                        <li><span style="font-variant-caps: small-caps;">IEEE Access</span></li>
+                        <!-- <li><span style="font-variant-caps: small-caps;">IEEE Access</span></li> -->
                         <li><span style="font-variant-caps: small-caps;">IEEE Transactions on Communications</span></li>
                         <li><span style="font-variant-caps: small-caps;">IEEE Transactions on Vehicular
                                 Technology</span></li>
