--- a/index.html
+++ b/index.html
@@ -629,7 +629,8 @@
             <font size="3">
                 <ul>
                     <p style="text-indent: -1.5rem;margin-left: 0rem;">
-                        <span>[1] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G", Springer Presss. [<a href="https://link.springer.com/book/10.1007/978-981-19-2704-1?utm_medium=referral&utm_source=google_books&utm_campaign=3_pier05_buy_print&utm_content=en_08082017#affiliations" target="_blank">Buy</a>]
+                        <span>[1] <b>Zhen Gao</b>, Malong Ke, Li Qiao, and Yikun Mei, "Massive IoT Access for 6G", Springer Presss. 
+                            [<a href="https://link.springer.com/book/10.1007/978-981-19-2704-1" target="_blank">Buy</a>]
                         </span>
                     </p>
 
